--- a/trolled.html
+++ b/trolled.html
@@ -13,6 +13,6 @@
 	</head>
 	
 	<body>
-		<img class="img" src="https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png" alt="trollface">
+		<img class="img" src="https://cdn.discordapp.com/attachments/328256672655081472/877000601261703168/trolled_1_1.png" alt="trollface">
 	</body>
 </html>
