--- a/trolled.html
+++ b/trolled.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>troll</title>
+		<link rel="icon" type="image/icon type" href="https://cdn.discordapp.com/attachments/328256672655081472/877000601261703168/trolled_1_1.png">
 		<style>
 			body{
 				background-image:url("https://cdn.discordapp.com/attachments/328256672655081472/877000601261703168/trolled_1_1.png");
